--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,9 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://jitpack.io' }
+    maven { url = 'https://maven.brott.dev/' }
+    maven { url = "https://maven.universablockchain.com/" }
     flatDir {
         dirs rootProject.file('libs')
     }
@@ -18,5 +21,7 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
+
+    implementation 'com.github.amarcolini.joos:command:master-SNAPSHOT'
 }
 
