the clock is ticking

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,12 +10,11 @@
 
 
 // Custom definitions may go here
-
-// Include common definitions from above.
 plugins {
-    id 'com.google.devtools.ksp' version '1.7.20-1.0.7'
+    id 'com.google.devtools.ksp' version '1.6.21-1.0.6'
 }
 
+// Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 apply plugin: 'kotlin-android'
@@ -27,9 +26,10 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    ksp 'com.github.amarcolini.joos:annotation:master-SNAPSHOT'
+//    ksp 'com.github.amarcolini.joos:annotation:master-SNAPSHOT'
+    ksp 'com.amarcolini.joos.command:annotation:0.4.9'
 }
 
-//configurations.all {
-//    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-//}
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
