--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -23,11 +23,21 @@ android {
     namespace = 'org.firstinspires.ftc.teamcode'
 }
 
+repositories {
+    //    maven { url = 'https://jitpack.io' }
+    maven { url = uri("C:/Users/Alessandro/IdeaProjects/joos/testRepo")}
+    maven { url = 'https://maven.brott.dev/' }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 //    ksp 'com.github.amarcolini.joos:annotation:master-SNAPSHOT'
     ksp 'com.amarcolini.joos.command:annotation:0.4.9'
+//    implementation 'com.github.amarcolini.joos:command:master-SNAPSHOT'
+    implementation 'com.amarcolini.joos:command:0.4.9'
+    implementation 'org.openftc:easyopencv:1.5.2'
+    implementation 'org.openftc:apriltag:1.1.0'
 }
 
 configurations.all {
