--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,7 +11,7 @@
 
 // Custom definitions may go here
 plugins {
-    id 'com.google.devtools.ksp' version '1.6.21-1.0.6'
+    id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
 }
 
 // Include common definitions from above.
@@ -35,10 +35,7 @@ dependencies {
 //    ksp 'com.github.amarcolini.joos:annotation:master-SNAPSHOT'
     ksp 'com.amarcolini.joos.command:annotation:0.4.9'
 //    implementation 'com.github.amarcolini.joos:command:master-SNAPSHOT'
-    implementation('com.amarcolini.joos:command:0.4.9') {
-        exclude group: 'com.acmerobotics.dashboard'
-    }
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.8'
+    implementation('com.amarcolini.joos:command:0.4.9')
     implementation 'org.openftc:easyopencv:1.5.3'
     implementation 'org.openftc:apriltag:1.1.1'
 }
